fix: 👋 MCP 🔱 v0.0.3